--- a/PlaceFinder/res/layout/choice_activity.xml
+++ b/PlaceFinder/res/layout/choice_activity.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:layout_marginRight="10dp"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="#39AD7C" >
 
     <TextView
         android:id="@+id/helpText"
@@ -13,13 +13,15 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="20dp"
         android:text="@string/help"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:textAppearance="?android:attr/textAppearanceSmall" 
+        android:textStyle="bold"/>
 
     <RadioGroup
         android:id="@+id/radioGroup1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal" 
+        android:layout_marginLeft="10dp">
 
         <RadioButton
             android:id="@+id/radioN"
@@ -32,57 +34,65 @@
             android:id="@+id/radioS"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/S" />
+            android:text="@string/S" 
+            android:layout_marginLeft="20dp"/>
 
     </RadioGroup>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="10dp" >
+        android:layout_marginBottom="30dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" >
 
         <EditText
             android:id="@+id/contactN1"
             android:layout_width="101dp"
             android:layout_height="match_parent"
             android:ems="10"
-            android:inputType="numberDecimal" />
+            android:inputType="numberDecimal"
+            android:maxLength="2" />
 
         <TextView
             android:id="@+id/degreN"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/degre"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:layout_marginBottom="20dp"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <EditText
             android:id="@+id/contactN2"
             android:layout_width="101dp"
             android:layout_height="match_parent"
             android:ems="10"
-            android:inputType="numberDecimal" />
+            android:inputType="numberDecimal" 
+            android:maxLength="2"/>
 
         <TextView
             android:id="@+id/pointN"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/point"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:layout_marginTop="10dp"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <EditText
             android:id="@+id/contactN3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:ems="10"
-            android:inputType="numberDecimal" />
+            android:inputType="numberDecimal" 
+            android:maxLength="3"/>
     </LinearLayout>
 
     <RadioGroup
         android:id="@+id/radioGroup2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal" 
+        android:layout_marginLeft="10dp">
 
         <RadioButton
             android:id="@+id/radioW"
@@ -95,57 +105,75 @@
             android:id="@+id/radioE"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/E" />
+            android:text="@string/E" 
+            android:layout_marginLeft="20dp"/>
     </RadioGroup>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="10dp" >
+        android:layout_marginBottom="30dp"
+        android:layout_marginLeft="10dp" 
+        android:layout_marginRight="10dp">
 
         <EditText
             android:id="@+id/contactW1"
             android:layout_width="100dp"
             android:layout_height="match_parent"
             android:ems="10"
-            android:inputType="numberDecimal" />
+            android:inputType="numberDecimal" 
+            android:maxLength="2"/>
 
         <TextView
             android:id="@+id/degreW"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/degre"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:layout_marginBottom="20dp"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <EditText
             android:id="@+id/contactW2"
             android:layout_width="100dp"
             android:layout_height="match_parent"
             android:ems="10"
-            android:inputType="numberDecimal" />
+            android:inputType="numberDecimal" 
+            android:maxLength="2"/>
 
         <TextView
             android:id="@+id/pointW"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/point"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:layout_marginTop="10dp"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <EditText
             android:id="@+id/contactW3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:ems="10"
-            android:inputType="numberDecimal" />
+            android:inputType="numberDecimal"
+            android:maxLength="3" />
     </LinearLayout>
+    
+     <RelativeLayout
+        android:id="@+id/relativeLayout1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/buttonValidate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:onClick="search"
-        android:text="Search" />
+	    <Button
+	        android:id="@+id/buttonValidate"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginLeft="10dp"
+	        android:onClick="search"
+	        android:layout_alignParentRight="true" 
+	        android:text="@string/search" 
+	        android:layout_marginRight="10dp"/>
+
+    </RelativeLayout>
+
+
 
 </LinearLayout>
